--- a/chatgpt-api/package.json
+++ b/chatgpt-api/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "backend",
+  "name": "chatgpt-api",
   "version": "1.0.0",
   "description": "chatgpt backend api",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
+    "dev": "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
