--- a/chatgpt-api/package.json
+++ b/chatgpt-api/package.json
@@ -4,8 +4,7 @@
   "description": "chatgpt backend api",
   "main": "index.js",
   "scripts": {
-    "dev": "node index",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node index"
   },
   "type": "module",
   "keywords": [
